add: readme description and postman collection
