# payment-service/docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "system booking mandaya hotels",
-        "title": "mandaya project API order-service",
+        "title": "mandaya project API payment-service",
         "contact": {},
         "version": "1.0"
     },
@@ -11,6 +11,11 @@
     "paths": {
         "/rooms/payment/{id}": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Pay the total price of a booking with the user's balance and mark it as paid.",
                 "consumes": [
                     "application/json"
@@ -23,6 +28,13 @@
                 ],
                 "summary": "Pay for a booking",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Booking ID",
@@ -41,6 +53,22 @@
                     },
                     "400": {
                         "description": "Insufficient balance or invalid request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized access",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden access",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
